Finish the firts section

--- a/index.html
+++ b/index.html
@@ -22,27 +22,54 @@
 
           </li>
           <li class="margin-left-auto">
-            <a href="#">
+            <button type="submit" class="without-style-button">
               <ion-icon name="search-outline" class="icons-navbar icons-navbar-1"></ion-icon>
-            </a>
+            </button>
           </li>
           <li class="">
-            <a href="#">
+            <button type="submit" class="without-style-button">
               <ion-icon name="menu-outline" class="icons-navbar icons-navbar-2"></ion-icon>
-            </a>
+            </button>
           </li>
         </ul>
       </nav>
   </header>
   <section class="firts-section">
-    <article class="firts-article-firts-section">
-
+    <article class="firts-article-firts-section transition-hover display-flex">
+      <div href="#" class="margin-top-auto padding-1">
+        <h3 class="padding-bottom-dot-2">
+          <a href="#" class="title-firts-article-firts-section">
+            New self-supervised AI models scan X-rays to predict prognosis of COVID-19 patients
+          </a>
+        </h3>
+        <small class="subtitle-firts-article-firts-section">
+          by <a href="#" class="subtitle-firts-article-firts-section-a text-decoration-none">Thomas Macaulay</a> <ion-icon name="timer-outline"></ion-icon> 5 hours ago <ion-icon name="share-social-outline"></ion-icon> 0
+        </small>
+      </div>
     </article>
-    <article class="second-article-firts-section">
-      
+    <article class="second-article-firts-section transition-hover display-flex">
+      <div href="#" class="margin-top-auto padding-1">
+        <h3 class="padding-bottom-dot-2">
+          <a href="#" class="title-firts-article-firts-section">
+            Electric vehicles can now use bus lanes in the UK — and cyclists aren’t happy
+          </a>
+        </h3>
+        <small class="subtitle-firts-article-firts-section">
+          by <a href="#" class="subtitle-firts-article-firts-section-a text-decoration-none">Matthew Beedham</a> <ion-icon name="timer-outline"></ion-icon> 7 hours ago <ion-icon name="share-social-outline"></ion-icon> 16
+        </small>
+      </div>
     </article>
-    <article class="third-article-firts-section">
-      
+    <article class="third-article-firts-section transition-hover display-flex">
+      <div href="#" class="margin-top-auto padding-1">
+        <h3 class="padding-bottom-dot-2">
+          <a href="#" class="title-firts-article-firts-section">
+            4 ‘minor’ features that will have a BIG impact on upcoming gadgets
+          </a>
+        </h3>
+        <small class="subtitle-firts-article-firts-section">
+          by <a href="#" class="subtitle-firts-article-firts-section-a text-decoration-none">Ivan Mehta</a> <ion-icon name="timer-outline"></ion-icon> 9 hours ago <ion-icon name="share-social-outline"></ion-icon> 16
+        </small>
+      </div>
     </article>
   </section>
   <section class="second-section">
