Finish Third Section

--- a/index.html
+++ b/index.html
@@ -195,19 +195,200 @@
   </section>
   <section class="third-section">
     <article class="title-third-section">
-
+      <h1>
+        <a href="#" class="text-decoration-none text-title-second-section line-height-2rem">
+          Latest funding rounds on Index.co <ion-icon name="chevron-forward-outline" class="arrow-right-title"></ion-icon>
+        </a>
+      </h1>
+      <div class="">
+        <p class="">
+          <a href="#" class="text-decoration-none p-title-second-section">
+            See more
+          </a>
+        </p>
+        <p class="">
+          <a href="#" class="text-decoration-none p-title-second-section">
+            Get updates by email
+          </a>
+        </p>
+        <p class="">
+          <a href="#" class="text-decoration-none p-title-second-section">
+            Add info
+          </a>
+        </p>
+      </div>
     </article>
     <article class="firts-article-third-section">
-
+      <div class="">
+        <div class="pic-1-firts-article-third-section">
+        </div>
+        <h2 class="title-firts-article-third-section">
+          BharatPe
+        </h2>
+        <div class="subtitle-firts-article-third-section">
+          <h3 class="subtitle-1-firts-article-third-section">
+            ₹2B
+          </h3>
+          <small class="subtitle-2-firts-article-third-section">
+            Debt financing
+          </small>
+        </div>
+      </div>
+      <div class="body-firts-article-third-section">
+        <small class="line-body-firts-article-third-section">
+          <ion-icon name="pricetag-outline" class="icons-firts-article-third-section"></ion-icon>
+          <span>
+            <a href="#" class="text-icons-firts-article-third-section">
+              Payments, +3
+            </a>
+          </span>
+        </small>
+        <small class="line-body-firts-article-third-section">
+          <ion-icon name="briefcase-outline" class="icons-firts-article-third-section"></ion-icon>
+          <span>
+            <a href="#" class="text-icons-firts-article-third-section">
+              ICICI Bank, +2
+            </a>
+          </span>
+        </small>
+      </div>
+      <div class="footer-firts-article-third-section">
+        <small>
+          <a href="#" class="text-footer-firts-article-third-section">
+            Exclusive: BharatPe raises Rs 200 Cr debt from ICICI, Alteria and Innoven
+            <span class="another-text-footer-firts-article-third-section">on Entrackr</span>
+          </a>
+        </small>
+      </div>
     </article>
     <article class="second-article-third-section">
-
+      <div class="">
+        <div class="pic-2-firts-article-third-section">
+        </div>
+        <h2 class="title-firts-article-third-section">
+          Oqton
+        </h2>
+        <div class="subtitle-firts-article-third-section">
+          <h3 class="subtitle-1-firts-article-third-section">
+            $40M
+          </h3>
+          <small class="subtitle-2-firts-article-third-section">
+            Series A
+          </small>
+        </div>
+      </div>
+      <div class="body-firts-article-third-section">
+        <small class="line-body-firts-article-third-section">
+          <ion-icon name="pricetag-outline" class="icons-firts-article-third-section"></ion-icon>
+          <span>
+            <a href="#" class="text-icons-firts-article-third-section">
+              Technology, +3
+            </a>
+          </span>
+        </small>
+        <small class="line-body-firts-article-third-section">
+          <ion-icon name="briefcase-outline" class="icons-firts-article-third-section"></ion-icon>
+          <span>
+            <a href="#" class="text-icons-firts-article-third-section">
+              PMV, +7
+            </a>
+          </span>
+        </small>
+      </div>
+      <div class="footer-firts-article-third-section">
+        <small>
+          <a href="#" class="text-footer-firts-article-third-section">
+            Oqton raises $40 million to apply AI to additive manufacturing
+            <span class="another-text-footer-firts-article-third-section">on VentureBeat</span>
+          </a>
+        </small>
+      </div>
     </article>
     <article class="third-article-third-section">
-
+      <div class="">
+        <div class="pic-3-firts-article-third-section">
+        </div>
+        <h2 class="title-firts-article-third-section">
+          Swimm
+        </h2>
+        <div class="subtitle-firts-article-third-section">
+          <h3 class="subtitle-1-firts-article-third-section">
+            $5.7M
+          </h3>
+          <small class="subtitle-2-firts-article-third-section">
+            Seed fund
+          </small>
+        </div>
+      </div>
+      <div class="body-firts-article-third-section">
+        <small class="line-body-firts-article-third-section">
+          <ion-icon name="pricetag-outline" class="icons-firts-article-third-section"></ion-icon>
+          <span>
+            <a href="#" class="text-icons-firts-article-third-section">
+              Information Technology, +2
+            </a>
+          </span>
+        </small>
+        <small class="line-body-firts-article-third-section">
+          <ion-icon name="briefcase-outline" class="icons-firts-article-third-section"></ion-icon>
+          <span>
+            <a href="#" class="text-icons-firts-article-third-section">
+              Pitango Venture Capital
+            </a>
+          </span>
+        </small>
+      </div>
+      <div class="footer-firts-article-third-section">
+        <small>
+          <a href="#" class="text-footer-firts-article-third-section">
+            Swimm raises $5.7M in seed funding round and launches its unique code-sharing platform
+            <span class="another-text-footer-firts-article-third-section">on SiliconANGLE</span>
+          </a>
+        </small>
+      </div>
     </article>
     <article class="fourth-article-third-section">
-
+      <div class="">
+        <div class="pic-4-firts-article-third-section">
+        </div>
+        <h2 class="title-firts-article-third-section">
+          Harness
+        </h2>
+        <div class="subtitle-firts-article-third-section">
+          <h3 class="subtitle-1-firts-article-third-section">
+            $85M
+          </h3>
+          <small class="subtitle-2-firts-article-third-section">
+            Venture Capital
+          </small>
+        </div>
+      </div>
+      <div class="body-firts-article-third-section">
+        <small class="line-body-firts-article-third-section">
+          <ion-icon name="pricetag-outline" class="icons-firts-article-third-section"></ion-icon>
+          <span>
+            <a href="#" class="text-icons-firts-article-third-section">
+              Information Technology, +2
+            </a>
+          </span>
+        </small>
+        <small class="line-body-firts-article-third-section">
+          <ion-icon name="briefcase-outline" class="icons-firts-article-third-section"></ion-icon>
+          <span>
+            <a href="#" class="text-icons-firts-article-third-section">
+              Battery Ventures, +6
+            </a>
+          </span>
+        </small>
+      </div>
+      <div class="footer-firts-article-third-section">
+        <small>
+          <a href="#" class="text-footer-firts-article-third-section">
+            Harness becomes $1.7B unicorn after raising $85M for its software delivery platform
+            <span class="another-text-footer-firts-article-third-section">on SiliconANGLE</span>
+          </a>
+        </small>
+      </div>
     </article>
   </section>
   <section class="fourth-section">
