Begin the Fourth section mobile vertion

--- a/index.html
+++ b/index.html
@@ -393,7 +393,11 @@
   </section>
   <section class="fourth-section">
     <article class="firts-article-fourth-section">
-
+      <h1>
+        <a href="#" class="text-decoration-none text-title-second-section">
+          Hard Fork <ion-icon name="chevron-forward-outline" class="arrow-right-title"></ion-icon>
+        </a>
+      </h1>
     </article>
     <article class="second-article-fourth-section">
 
