Worked on section 4

--- a/index.html
+++ b/index.html
@@ -398,30 +398,134 @@
           Hard Fork <ion-icon name="chevron-forward-outline" class="arrow-right-title"></ion-icon>
         </a>
       </h1>
+      <div class="container4">
+        <img src="https://via.placeholder.com/150" alt="Image" />
+        <div class="bottom-left4">
+          <h2>MOST POPULAR</h2>
+          <h3>Twitter shares fall 7% in pre-market trading after Trump's removal</h3>
+          <p>Ivan Mehta -8 days ago</p>
+        </div>
+      </div>
     </article>
     <article class="second-article-fourth-section">
-
+      <h1>
+        <a href="#" class="text-decoration-none text-title-second-section">
+          Apps <ion-icon name="chevron-forward-outline" class="arrow-right-title"></ion-icon>
+        </a>
+      </h1>
+      <div class="container4">
+        <img src="https://via.placeholder.com/150" alt="Image" />
+        <div class="bottom-left4">
+          <h2>MOST POPULAR</h2>
+          <h3>Report: Trump's Twitter ban led to a 73% drop in election fraud misinformation</h3>
+          <p>Napier Lopez -17 hours ago</p>
+        </div>
+      </div>
     </article>
     <article class="third-article-fourth-section">
-
+      <h1>
+        <a href="#" class="text-decoration-none text-title-second-section">
+          Gears <ion-icon name="chevron-forward-outline" class="arrow-right-title"></ion-icon>
+        </a>
+      </h1>
+      <div class="container4">
+        <img src="https://via.placeholder.com/150" alt="Image" />
+        <div class="bottom-left4">
+          <h2>MOST POPULAR</h2>
+          <h3>How to manage your screen time during the lockdown, according to science</h3>
+          <p>The Conversation -2 days ago</p>
+        </div>
+      </div>
     </article>
     <article class="fourth-article-fourth-section">
-
+      <h1>
+        <a href="#" class="text-decoration-none text-title-second-section">
+          Tech <ion-icon name="chevron-forward-outline" class="arrow-right-title"></ion-icon>
+        </a>
+      </h1>
+      <div class="container4">
+        <img src="https://via.placeholder.com/150" alt="Image" />
+        <div class="bottom-left4">
+          <h2>MOST POPULAR</h2>
+          <h3>UK cities are getting all-electric bus fleets, starting with Oxford and Coventry</h3>
+          <p>Cities Today -6 hours ago</p>
+        </div>
+      </div>
     </article>
     <article class="fifth-article-fourth-section">
-
+      <h1>
+        <a href="#" class="text-decoration-none text-title-second-section">
+          Tech <ion-icon name="chevron-forward-outline" class="arrow-right-title"></ion-icon>
+        </a>
+      </h1>
+      <div class="container4">
+        <img src="https://via.placeholder.com/150" alt="Image" />
+        <div class="bottom-left4">
+          <h2>MOST POPULAR</h2>
+          <h3>UK cities are getting all-electric bus fleets, starting with Oxford and Coventry</h3>
+          <p>Cities Today -6 hours ago</p>
+        </div>
+      </div>
     </article>
     <article class="sixth-article-fourth-section">
-
+      <h1>
+        <a href="#" class="text-decoration-none text-title-second-section">
+          Creative <ion-icon name="chevron-forward-outline" class="arrow-right-title"></ion-icon>
+        </a>
+      </h1>
+      <div class="container4">
+        <img src="https://via.placeholder.com/150" alt="Image" />
+        <div class="bottom-left4">
+          <h2>MOST POPULAR</h2>
+          <h3>How global crisis affects design</h3>
+          <p>Rebecca Bellan -21 days ago</p>
+        </div>
+      </div>
     </article>
     <article class="seventh-article-fourth-section">
-
+      <h1>
+        <a href="#" class="text-decoration-none text-title-second-section">
+          Podium <ion-icon name="chevron-forward-outline" class="arrow-right-title"></ion-icon>
+        </a>
+      </h1>
+      <div class="container4">
+        <img src="https://via.placeholder.com/150" alt="Image" />
+        <div class="bottom-left4">
+          <h2>MOST POPULAR</h2>
+          <h3>2021 will be the year open source projects overcome their diversity problems</h3>
+          <p>Christopher Ferris -22 days ago</p>
+        </div>
+      </div>
     </article>
     <article class="eighth-article-fourth-section">
-
+      <h1>
+        <a href="#" class="text-decoration-none text-title-second-section">
+          Insights <ion-icon name="chevron-forward-outline" class="arrow-right-title"></ion-icon>
+        </a>
+      </h1>
+      <div class="container4">
+        <img src="https://via.placeholder.com/150" alt="Image" />
+        <div class="bottom-left4">
+          <h2>MOST POPULAR</h2>
+          <h3>7 easy tips to negotiate your salary as a developer</h3>
+          <p>cult -6 hours ago</p>
+        </div>
+      </div>
     </article>
     <article class="nineth-article-fourth-section">
-
+      <h1>
+        <a href="#" class="text-decoration-none text-title-second-section">
+          Launch <ion-icon name="chevron-forward-outline" class="arrow-right-title"></ion-icon>
+        </a>
+      </h1>
+      <div class="container4">
+        <img src="https://via.placeholder.com/150" alt="Image" />
+        <div class="bottom-left4">
+          <h2>MOST POPULAR</h2>
+          <h3>About time! Toyota finally announces an all-electric vehicle</h3>
+          <p>Matthew Beedham -5 weeks ago</p>
+        </div>
+      </div>
     </article>
   </section>
   <section class="fifth-section">
