--- a/index.html
+++ b/index.html
@@ -844,32 +844,137 @@
     </article>
   </section>
   <section class="fifth-section">
-    <article class="title-fifth-section">
-
+    <article class="title-fifth-section display-flex">
+      <h1>
+        <a href="#" class="text-decoration-none text-title-second-section">
+          Latest deals <ion-icon name="chevron-forward-outline" class="arrow-right-title"></ion-icon>
+        </a>
+      </h1>
+      <p class="second-text-title-fifth-section">
+        <a href="#">
+          See all Deals
+        </a>
+      </p>
     </article>
-    <article class="firts-article-fifth-section">
-
+    <article class="firts-article-fifth-section display-flex">
+      <div class="picture-1-article-fifth-section">
+      </div>
+      <div class="info-firts-article-second-section">
+        <h4>
+          <a href="#" class="title-info-firts-article-second-section">
+            Report: Apple is building foldable iPhone prototypes
+          </a>
+        </h4>
+        <small class="text-info-firts-article-fifth-section">
+          $690
+        </small>
+        <span class="text-2-info-firts-article-fifth-section">$29</span>
+      </div>
     </article>
-    <article class="second-article-fifth-section">
-
+    <article class="second-article-fifth-section display-flex">
+      <div class="picture-2-article-fifth-section">
+      </div>
+      <div class="info-firts-article-second-section">
+        <h4>
+          <a href="#" class="title-info-firts-article-second-section">
+            Report: Apple is building foldable iPhone prototypes
+          </a>
+        </h4>
+        <small class="text-info-firts-article-fifth-section">
+          $690
+        </small>
+        <span class="text-2-info-firts-article-fifth-section">$29</span>
+      </div>
     </article>
-    <article class="third-article-fifth-section">
-
+    <article class="third-article-fifth-section display-flex">
+      <div class="picture-3-article-fifth-section">
+      </div>
+      <div class="info-firts-article-second-section">
+        <h4>
+          <a href="#" class="title-info-firts-article-second-section">
+            Report: Apple is building foldable iPhone prototypes
+          </a>
+        </h4>
+        <small class="text-info-firts-article-fifth-section">
+          $690
+        </small>
+        <span class="text-2-info-firts-article-fifth-section">$29</span>
+      </div>
     </article>
-    <article class="fourth-article-fifth-section">
-
+    <article class="fourth-article-fifth-section display-flex">
+      <div class="picture-4-article-fifth-section">
+      </div>
+      <div class="info-firts-article-second-section">
+        <h4>
+          <a href="#" class="title-info-firts-article-second-section">
+            Report: Apple is building foldable iPhone prototypes
+          </a>
+        </h4>
+        <small class="text-info-firts-article-fifth-section">
+          $690
+        </small>
+        <span class="text-2-info-firts-article-fifth-section">$29</span>
+      </div>
     </article>
-    <article class="fifth-article-fifth-section">
-
+    <article class="fifth-article-fifth-section display-flex">
+      <div class="picture-5-article-fifth-section">
+      </div>
+      <div class="info-firts-article-second-section">
+        <h4>
+          <a href="#" class="title-info-firts-article-second-section">
+            Report: Apple is building foldable iPhone prototypes
+          </a>
+        </h4>
+        <small class="text-info-firts-article-fifth-section">
+          $690
+        </small>
+        <span class="text-2-info-firts-article-fifth-section">$29</span>
+      </div>
     </article>
-    <article class="sixth-article-fifth-section">
-
+    <article class="sixth-article-fifth-section display-flex">
+      <div class="picture-6-article-fifth-section">
+      </div>
+      <div class="info-firts-article-second-section">
+        <h4>
+          <a href="#" class="title-info-firts-article-second-section">
+            Report: Apple is building foldable iPhone prototypes
+          </a>
+        </h4>
+        <small class="text-info-firts-article-fifth-section">
+          $690
+        </small>
+        <span class="text-2-info-firts-article-fifth-section">$29</span>
+      </div>
     </article>
-    <article class="seventh-article-fifth-section">
-
+    <article class="seventh-article-fifth-section display-flex">
+      <div class="picture-7-article-fifth-section">
+      </div>
+      <div class="info-firts-article-second-section">
+        <h4>
+          <a href="#" class="title-info-firts-article-second-section">
+            Report: Apple is building foldable iPhone prototypes
+          </a>
+        </h4>
+        <small class="text-info-firts-article-fifth-section">
+          $690
+        </small>
+        <span class="text-2-info-firts-article-fifth-section">$29</span>
+      </div>
     </article>
-    <article class="eighth-article-fifth-section">
-
+    <article class="eighth-article-fifth-section display-flex">
+      <div class="picture-8-article-fifth-section">
+      </div>
+      <div class="info-firts-article-second-section">
+        <h4>
+          <a href="#" class="title-info-firts-article-second-section">
+            Report: Apple is building foldable iPhone prototypes
+          </a>
+        </h4>
+        <small class="text-info-firts-article-fifth-section">
+          $690
+        </small>
+        <span class="text-2-info-firts-article-fifth-section">$29</span>
+      </div>
     </article>
   </section>
   <footer class="footer-page">
