Finish Footer section Mobile Version

--- a/index.html
+++ b/index.html
@@ -979,15 +979,72 @@
   </section>
   <footer class="footer-page">
     <div class="firts-part-footer-page">
-
+      <div class="icon-firts-part-footer-page">
+        <ion-icon name="logo-facebook"></ion-icon>
+      </div>
+      <div class="icon-firts-part-footer-page">
+        <ion-icon name="logo-twitter"></ion-icon>
+      </div>
+      <div class="icon-firts-part-footer-page">
+        <ion-icon name="logo-youtube"></ion-icon>
+      </div>
+      <div class="icon-firts-part-footer-page">
+        <ion-icon name="logo-instagram"></ion-icon>
+      </div>
+      <div class="icon-firts-part-footer-page">
+        <ion-icon name="logo-pinterest"></ion-icon>
+      </div>
+      <div class="icon-firts-part-footer-page">
+        <ion-icon name="logo-rss"></ion-icon>
+      </div>
+      <div class="icon-firts-part-footer-page">
+        <ion-icon name="mail-outline"></ion-icon>
+      </div>
     </div>
     <div class="second-part-footer-page">
-
+      <a href="#" class="text-decoration-none">
+        <h5 class="links-text-footer">
+          Events
+        </h5>
+      </a>
+      <a href="#" class="text-decoration-none">
+        <h5 class="links-text-footer">
+          About
+        </h5>
+      </a>
+      <a href="#" class="text-decoration-none">
+        <h5 class="links-text-footer">
+          Advertise
+        </h5>
+      </a>
+      <a href="#" class="text-decoration-none">
+        <h5 class="links-text-footer">
+          Jobs
+        </h5>
+      </a>
+      <a href="#" class="text-decoration-none">
+        <h5 class="links-text-footer">
+          Contact
+        </h5>
+      </a>
     </div>
     <div class="third-part-footer-page">
-
+      <div class="text-1-third-part-footer-page">
+        <img src="assets/tnw.svg" alt="tnw-small-icon" class="tnw-small-icon">
+        <span class="line-height-1-dot-8-rem">
+          © 2006–2021 The Next Web B.V.
+        </span>
+      </div>
+      <div class="line-height-1-dot-8-rem">
+        Made with <3 in Amsterdam.
+      </div>
+      <div class="text-3-third-part-footer-page">
+        <span class="line-height-1-dot-8-rem">
+          Powered by
+        </span>
+        <img src="assets/stackpath.svg" alt="stackpath-small-icon" class="stackpath-small-icon">
+      </div>
     </div>
-  </footer>
   <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 </body>
 </html>
