Finish navbar tablet version

--- a/index.html
+++ b/index.html
@@ -14,21 +14,106 @@
         </a>
       </div>
       <nav class="top-navbar">
-        hola
+        <div class="items-top-navbar">
+          <ul class="items-top-navbar">
+            <li class="firts-item-top-navbar">
+              <a href="#" class="link-firts-item-top-navbar">
+                <small>News</small>
+              </a>
+            </li>
+            <li class="item-top-navbar">
+              <a href="#" class="link-item-top-navbar">
+                <small>Events ▾</small>
+              </a>
+            </li>
+            <li class="item-top-navbar">
+              <a href="#" class="link-item-top-navbar">
+                <small>Business ▾</small>
+              </a>
+            </li>
+            <li class="item-top-navbar">
+              <a href="#" class="link-item-top-navbar">
+                <small>AMAs</small>
+              </a>
+            </li>
+            <li class="item-top-navbar">
+              <a href="#" class="link-item-top-navbar">
+                <small>Spaces</small>
+              </a>
+            </li>
+            <li class="item-top-navbar">
+              <a href="#" class="link-item-top-navbar">
+                <small>Terms & Conditions</small>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="items-top-navbar">
+          <ul class="items-top-navbar">
+            <li class="item-top-navbar">
+              <a href="#" class="link-item-top-navbar">
+                <small>About</small>
+              </a>
+            </li>
+            <li class="item-top-navbar">
+              <a href="#" class="link-item-top-navbar">
+                <small>Advertise</small>
+              </a>
+            </li>
+            <li class="item-top-navbar">
+              <a href="#" class="link-item-top-navbar">
+                <small>Jobs</small>
+              </a>
+            </li>
+            <li class="last-item-top-navbar">
+              <a href="#" class="link-item-top-navbar">
+                <small>Contact</small>
+              </a>
+            </li>
+          </ul>
+        </div>
       </nav>
       <nav class="bottom-navbar">
         <ul class="bottom-navbar-list">
-          <li class="">
-
+          <li class="items-bottom-navbar">
+            <div class="items-bottom-navbar">
+              <ul class="items-bottom-navbar">
+                <li class="firts-item-bottom-navbar">
+                  <a href="#" class="link-item-bottom-navbar">
+                    Latest
+                  </a>
+                </li>
+                <li class="item-bottom-navbar">
+                  <a href="#" class="link-item-bottom-navbar">
+                    Hard Fork
+                  </a>
+                </li>
+                <li class="item-bottom-navbar">
+                  <a href="#" class="link-item-bottom-navbar">
+                    Plugged
+                  </a>
+                </li>
+                <li class="item-bottom-navbar">
+                  <a href="#" class="link-item-bottom-navbar">
+                    ReadMe
+                  </a>
+                </li>
+                <li class="item-bottom-navbar">
+                  <a href="#" class="link-item-bottom-navbar">
+                    Growth Quarters
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="margin-left-auto">
             <button type="submit" class="without-style-button">
-              <ion-icon name="search-outline" class="icons-navbar icons-navbar-1"></ion-icon>
+              <ion-icon name="search-outline" class="icons-navbar icons-navbar-1 bottom-navbar-list"></ion-icon>
             </button>
           </li>
-          <li class="">
+          <li class="icon-menu-outline">
             <button type="submit" class="without-style-button">
-              <ion-icon name="menu-outline" class="icons-navbar icons-navbar-2"></ion-icon>
+              <ion-icon name="menu-outline" class="icons-navbar icons-navbar-2 bottom-navbar-list"></ion-icon>
             </button>
           </li>
         </ul>
