Last fix navbar mobile version

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       </nav>
       <nav class="bottom-navbar">
         <ul class="bottom-navbar-list">
-          <li class="items-bottom-navbar">
-            <div class="items-bottom-navbar">
+          <li class="left-items-bottom-navbar">
+            <div class="">
               <ul class="items-bottom-navbar">
                 <li class="firts-item-bottom-navbar">
                   <a href="#" class="link-item-bottom-navbar">
