Finish second Section Tablet Version

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <nav class="bottom-navbar">
         <ul class="bottom-navbar-list">
           <li class="left-items-bottom-navbar">
-            <div class="">
+            <div>
               <ul class="items-bottom-navbar">
                 <li class="firts-item-bottom-navbar">
                   <a href="#" class="link-item-bottom-navbar">
@@ -165,7 +165,7 @@
         </a>
       </h1>
     </article>
-    <article class="firts-article-second-section display-flex">
+    <article class="firts-article-second-section">
       <div class="picture-1-article-second-section">
       </div>
       <div class="info-firts-article-second-section">
@@ -179,7 +179,7 @@
         </small>
       </div>
     </article>
-    <article class="second-article-second-section display-flex">
+    <article class="second-article-second-section">
       <div class="picture-2-article-second-section">
       </div>
       <div class="info-firts-article-second-section">
@@ -193,7 +193,7 @@
         </small>
       </div>
     </article>
-    <article class="third-article-second-section display-flex">
+    <article class="third-article-second-section">
       <div class="picture-3-article-second-section">
       </div>
       <div class="info-firts-article-second-section">
@@ -207,7 +207,7 @@
         </small>
       </div>
     </article>
-    <article class="fourth-article-second-section display-flex">
+    <article class="fourth-article-second-section">
       <div class="picture-4-article-second-section">
       </div>
       <div class="info-firts-article-second-section">
@@ -221,7 +221,7 @@
         </small>
       </div>
     </article>
-    <article class="fifth-article-second-section display-flex">
+    <article class="fifth-article-second-section">
       <div class="picture-5-article-second-section">
       </div>
       <div class="info-firts-article-second-section">
@@ -235,7 +235,7 @@
         </small>
       </div>
     </article>
-    <article class="sixth-article-second-section display-flex">
+    <article class="sixth-article-second-section">
       <div class="picture-6-article-second-section">
       </div>
       <div class="info-firts-article-second-section">
@@ -249,7 +249,7 @@
         </small>
       </div>
     </article>
-    <article class="seventh-article-second-section display-flex">
+    <article class="seventh-article-second-section">
       <div class="picture-7-article-second-section">
       </div>
       <div class="info-firts-article-second-section">
@@ -263,7 +263,7 @@
         </small>
       </div>
     </article>
-    <article class="eighth-article-second-section display-flex">
+    <article class="eighth-article-second-section">
       <div class="picture-8-article-second-section">
       </div>
       <div class="info-firts-article-second-section">
