Finish third section tablet version

--- a/index.html
+++ b/index.html
@@ -285,19 +285,19 @@
           Latest funding rounds on Index.co <ion-icon name="chevron-forward-outline" class="arrow-right-title"></ion-icon>
         </a>
       </h1>
-      <div class="">
-        <p class="">
-          <a href="#" class="text-decoration-none p-title-second-section">
+      <div class="subtitle-third-section">
+        <p>
+          <a href="#" class="text-decoration-none p-1-title-second-section">
             See more
           </a>
         </p>
-        <p class="">
-          <a href="#" class="text-decoration-none p-title-second-section">
+        <p>
+          <a href="#" class="text-decoration-none p-2-title-second-section">
             Get updates by email
           </a>
         </p>
-        <p class="">
-          <a href="#" class="text-decoration-none p-title-second-section">
+        <p>
+          <a href="#" class="text-decoration-none p-3-title-second-section">
             Add info
           </a>
         </p>
