Finish Fifth section tablet version

--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@
     </article>
   </section>
   <section class="fifth-section">
-    <article class="title-fifth-section display-flex">
+    <article class="title-fifth-section">
       <h1>
         <a href="#" class="text-decoration-none text-title-second-section">
           Latest deals <ion-icon name="chevron-forward-outline" class="arrow-right-title"></ion-icon>
@@ -941,9 +941,14 @@
         </a>
       </p>
     </article>
-    <article class="firts-article-fifth-section display-flex">
+    <article class="firts-article-fifth-section">
       <div class="picture-1-article-fifth-section">
       </div>
+      <div class="deals-ribbon">
+        <div class="text-deals-ribbon">
+          96% off
+        </div>
+      </div>
       <div class="info-firts-article-second-section">
         <h4>
           <a href="#" class="title-info-firts-article-second-section">
@@ -956,9 +961,14 @@
         <span class="text-2-info-firts-article-fifth-section">$29</span>
       </div>
     </article>
-    <article class="second-article-fifth-section display-flex">
+    <article class="second-article-fifth-section">
       <div class="picture-2-article-fifth-section">
       </div>
+      <div class="deals-ribbon">
+        <div class="text-deals-ribbon">
+          96% off
+        </div>
+      </div>
       <div class="info-firts-article-second-section">
         <h4>
           <a href="#" class="title-info-firts-article-second-section">
@@ -971,9 +981,14 @@
         <span class="text-2-info-firts-article-fifth-section">$29</span>
       </div>
     </article>
-    <article class="third-article-fifth-section display-flex">
+    <article class="third-article-fifth-section">
       <div class="picture-3-article-fifth-section">
       </div>
+      <div class="deals-ribbon">
+        <div class="text-deals-ribbon">
+          96% off
+        </div>
+      </div>
       <div class="info-firts-article-second-section">
         <h4>
           <a href="#" class="title-info-firts-article-second-section">
@@ -986,9 +1001,14 @@
         <span class="text-2-info-firts-article-fifth-section">$29</span>
       </div>
     </article>
-    <article class="fourth-article-fifth-section display-flex">
+    <article class="fourth-article-fifth-section">
       <div class="picture-4-article-fifth-section">
       </div>
+      <div class="deals-ribbon">
+        <div class="text-deals-ribbon">
+          96% off
+        </div>
+      </div>
       <div class="info-firts-article-second-section">
         <h4>
           <a href="#" class="title-info-firts-article-second-section">
@@ -1001,9 +1021,14 @@
         <span class="text-2-info-firts-article-fifth-section">$29</span>
       </div>
     </article>
-    <article class="fifth-article-fifth-section display-flex">
+    <article class="fifth-article-fifth-section">
       <div class="picture-5-article-fifth-section">
       </div>
+      <div class="deals-ribbon">
+        <div class="text-deals-ribbon">
+          96% off
+        </div>
+      </div>
       <div class="info-firts-article-second-section">
         <h4>
           <a href="#" class="title-info-firts-article-second-section">
@@ -1016,9 +1041,14 @@
         <span class="text-2-info-firts-article-fifth-section">$29</span>
       </div>
     </article>
-    <article class="sixth-article-fifth-section display-flex">
+    <article class="sixth-article-fifth-section">
       <div class="picture-6-article-fifth-section">
       </div>
+      <div class="deals-ribbon">
+        <div class="text-deals-ribbon">
+          96% off
+        </div>
+      </div>
       <div class="info-firts-article-second-section">
         <h4>
           <a href="#" class="title-info-firts-article-second-section">
@@ -1031,9 +1061,14 @@
         <span class="text-2-info-firts-article-fifth-section">$29</span>
       </div>
     </article>
-    <article class="seventh-article-fifth-section display-flex">
+    <article class="seventh-article-fifth-section">
       <div class="picture-7-article-fifth-section">
       </div>
+      <div class="deals-ribbon">
+        <div class="text-deals-ribbon">
+          96% off
+        </div>
+      </div>
       <div class="info-firts-article-second-section">
         <h4>
           <a href="#" class="title-info-firts-article-second-section">
@@ -1046,8 +1081,13 @@
         <span class="text-2-info-firts-article-fifth-section">$29</span>
       </div>
     </article>
-    <article class="eighth-article-fifth-section display-flex">
+    <article class="eighth-article-fifth-section">
       <div class="picture-8-article-fifth-section">
+      </div>
+      <div class="deals-ribbon">
+        <div class="text-deals-ribbon">
+          96% off
+        </div>
       </div>
       <div class="info-firts-article-second-section">
         <h4>
