Finish header section desktop version

--- a/index.html
+++ b/index.html
@@ -1161,7 +1161,7 @@
         </span>
       </div>
       <div class="line-height-1-dot-8-rem">
-        Made with <3 in Amsterdam.
+        Made with &#x276e;3 in Amsterdam.
       </div>
       <div class="text-3-third-part-footer-page">
         <span class="line-height-1-dot-8-rem">
@@ -1170,6 +1170,7 @@
         <img src="assets/stackpath.svg" alt="stackpath-small-icon" class="stackpath-small-icon">
       </div>
     </div>
+  </footer>
   <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 </body>
 </html>
