Finish firts section Desktop version

--- a/index.html
+++ b/index.html
@@ -131,11 +131,18 @@
           by <a href="#" class="subtitle-firts-article-firts-section-a text-decoration-none">Thomas Macaulay</a> <ion-icon name="timer-outline"></ion-icon> 5 hours ago <ion-icon name="share-social-outline"></ion-icon> 0
         </small>
       </div>
+      <div class="cover-gradient">
+      </div>
+      <div class="cover-logo">
+      </div>
+      <div class="cover-date">
+        <small>Thursday — January 21, 2021</small>
+      </div>
     </article>
     <article class="second-article-firts-section transition-hover display-flex">
       <div href="#" class="margin-top-auto padding-1">
         <h3 class="padding-bottom-dot-2">
-          <a href="#" class="title-firts-article-firts-section">
+          <a href="#" class="title-second-article-firts-section">
             Electric vehicles can now use bus lanes in the UK — and cyclists aren’t happy
           </a>
         </h3>
@@ -147,7 +154,7 @@
     <article class="third-article-firts-section transition-hover display-flex">
       <div href="#" class="margin-top-auto padding-1">
         <h3 class="padding-bottom-dot-2">
-          <a href="#" class="title-firts-article-firts-section">
+          <a href="#" class="title-second-article-firts-section">
             4 ‘minor’ features that will have a BIG impact on upcoming gadgets
           </a>
         </h3>
