fix the error for hintrc

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   </header>
   <section class="firts-section">
     <article class="firts-article-firts-section transition-hover display-flex">
-      <div href="#" class="margin-top-auto padding-1">
+      <div class="margin-top-auto padding-1">
         <h3 class="padding-bottom-dot-2">
           <a href="#" class="title-firts-1-article-firts-section">
             New self-supervised AI models scan X-rays to predict prognosis of COVID-19 patients
@@ -140,7 +140,7 @@
       </div>
     </article>
     <article class="second-article-firts-section transition-hover display-flex">
-      <div href="#" class="margin-top-auto padding-1">
+      <div  class="margin-top-auto padding-1">
         <h3 class="padding-bottom-dot-2">
           <a href="#" class="title-second-article-firts-section">
             Electric vehicles can now use bus lanes in the UK — and cyclists aren’t happy
@@ -152,7 +152,7 @@
       </div>
     </article>
     <article class="third-article-firts-section transition-hover display-flex">
-      <div href="#" class="margin-top-auto padding-1">
+      <div  class="margin-top-auto padding-1">
         <h3 class="padding-bottom-dot-2">
           <a href="#" class="title-second-article-firts-section">
             4 ‘minor’ features that will have a BIG impact on upcoming gadgets
@@ -166,11 +166,11 @@
   </section>
   <section class="second-section">
     <article class="title-second-section">
-      <h1>
+      <h2>
         <a href="#" class="text-decoration-none text-title-second-section">
           Latest news <ion-icon name="chevron-forward-outline" class="arrow-right-title"></ion-icon>
         </a>
-      </h1>
+      </h2>
     </article>
     <article class="firts-article-second-section">
       <div class="picture-1-article-second-section">
@@ -491,7 +491,7 @@
         </a>
       </h1>
       <div class="text-pic-1-firts-article-fourth-section display-flex">
-        <div href="#" class="margin-top-auto padding-1">
+        <div  class="margin-top-auto padding-1">
           <h5 class="text-most-popular">
             Most Popular
           </h5>
@@ -541,7 +541,7 @@
         </a>
       </h1>
       <div class="text-pic-2-firts-article-fourth-section display-flex">
-        <div href="#" class="margin-top-auto padding-1">
+        <div  class="margin-top-auto padding-1">
           <h5 class="text-most-popular">
             Most Popular
           </h5>
@@ -591,7 +591,7 @@
         </a>
       </h1>
       <div class="text-pic-3-firts-article-fourth-section display-flex">
-        <div href="#" class="margin-top-auto padding-1">
+        <div  class="margin-top-auto padding-1">
           <h5 class="text-most-popular">
             Most Popular
           </h5>
@@ -641,7 +641,7 @@
         </a>
       </h1>
       <div class="text-pic-4-firts-article-fourth-section display-flex">
-        <div href="#" class="margin-top-auto padding-1">
+        <div  class="margin-top-auto padding-1">
           <h5 class="text-most-popular">
             Most Popular
           </h5>
@@ -691,7 +691,7 @@
         </a>
       </h1>
       <div class="text-pic-5-firts-article-fourth-section display-flex">
-        <div href="#" class="margin-top-auto padding-1">
+        <div  class="margin-top-auto padding-1">
           <h5 class="text-most-popular">
             Most Popular
           </h5>
@@ -741,7 +741,7 @@
         </a>
       </h1>
       <div class="text-pic-6-firts-article-fourth-section display-flex">
-        <div href="#" class="margin-top-auto padding-1">
+        <div  class="margin-top-auto padding-1">
           <h5 class="text-most-popular">
             Most Popular
           </h5>
@@ -791,7 +791,7 @@
         </a>
       </h1>
       <div class="text-pic-7-firts-article-fourth-section display-flex">
-        <div href="#" class="margin-top-auto padding-1">
+        <div  class="margin-top-auto padding-1">
           <h5 class="text-most-popular">
             Most Popular
           </h5>
@@ -841,7 +841,7 @@
         </a>
       </h1>
       <div class="text-pic-8-firts-article-fourth-section display-flex">
-        <div href="#" class="margin-top-auto padding-1">
+        <div  class="margin-top-auto padding-1">
           <h5 class="text-most-popular">
             Most Popular
           </h5>
@@ -891,7 +891,7 @@
         </a>
       </h1>
       <div class="text-pic-9-firts-article-fourth-section display-flex">
-        <div href="#" class="margin-top-auto padding-1">
+        <div  class="margin-top-auto padding-1">
           <h5 class="text-most-popular">
             Most Popular
           </h5>
