--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </nav>
       <nav class="bottom-navbar">
         <ul class="bottom-navbar-list">
-          <li class="left-items-bottom-navbar">
+          <li class="left-items-bottom-navbar float-left">
             <div>
               <ul class="items-bottom-navbar">
                 <li class="firts-item-bottom-navbar">
